# informant

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs  settings.rs  stats.rs  workrave.rs
