[package]
name = "informant"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = "0.19.0"
tracing-subscriber = "0.3"
rfd = "0.10.0"
chrono = "0.4.23"
time = "0.3.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
whoami = "1.2.3"
image = "0.24.5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
